--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <a href="#about" class="header__link">О НАС</a>
             <a href="#works" class="header__link">РАБОТЫ</a>
             <a href="#contacts" class="header__link">КОНТАКТЫ</a>  
-            <img class="header__menu" src="images/icons/burger.png" alt="img">  
+            <img class="header__menu" src="images/icons/burger.svg" alt="img">  
             <ul class="menu">
               <li class="menu__item"><a href="#about">О НАС</a></li>
               <li class="menu__item"><a href="#works">РАБОТЫ</a></li>
