--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <div class="main">
         <div class="container">
           <header class="header">
-            <a href="index.html" class="header__logo"><img class="logo" src="images/company.svg" alt="img"></a>
+            <a href="index.html" class="header__logo"><img class="logo" src="images/company1.svg" alt="img"></a>
             <div class="header-links">
               <a href="#about" class="header__link">О НАС</a>
               <a href="#works" class="header__link">РАБОТЫ</a>
